--- a/PuntoVentaWeb/Pages/VerCotizacion.razor
+++ b/PuntoVentaWeb/Pages/VerCotizacion.razor
@@ -16,10 +16,14 @@
         <div class="card shadow">
             <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
                 <h5 class="mb-0">Cotización #@cotizacion.Id</h5>
-
-                <button class="btn btn-light text-primary fw-bold" @onclick="DescargarPdf">
-                    <i class="oi oi-print"></i> Descargar PDF
-                </button>
+                <div>
+                    <a class="btn btn-light text-success fw-bold me-2" href="/cotizacion/copiar/@cotizacion.Id">
+                        <i class="oi oi-plus"></i> Copiar cotización
+                    </a>
+                    <button class="btn btn-light text-primary fw-bold" @onclick="DescargarPdf">
+                        <i class="oi oi-print"></i> Descargar PDF
+                    </button>
+                </div>
             </div>
             <div class="card-body">
                 <div class="row mb-4">
